# CogniFind

./: .gitattributes  .gitignore  DESIGN.md  README.md  api.py  build.ps1  cognifind-backend.spec  dev.ps1  main.py  release.ps1
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/resources/models/: README.txt
frontend/src-tauri/src/: lib.rs
scripts/: fetch_models.py  inspect_index.py
src/: config.py  database.py  embedding.py  parser.py  ui.py  watcher.py
